--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -591,6 +591,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.5</myfaces-shared.version>
+    <myfaces-shared.version>3.0.6-SNAPSHOT</myfaces-shared.version>
   </properties>
 </project>
