--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.7</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -13,9 +13,9 @@
     The private implementation classes of the Apache MyFaces Core JSF-1.1 Implementation.
   </description>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/impl</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/impl</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/1_1_7/impl</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/1_1_7/impl</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/tags/1_1_7/impl</url>
   </scm>
   <build>
     <resources>
