--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.7</version>
   </parent>
 
   <artifactId>myfaces-core-assembly</artifactId>
@@ -97,7 +97,7 @@
 		            <artifactItem>
                   <groupId>org.apache.myfaces.shared</groupId>
                   <artifactId>myfaces-shared-impl</artifactId>
-                  <version>2.0.7-SNAPSHOT</version>
+                  <version>2.0.10</version>
 		              <classifier>sources</classifier>
                 </artifactItem>
                </artifactItems>
