https://issues.apache.org/jira/browse/MYFACES-2172
Smaller fixups to make the YUI compressor work again,
also the code is somewhat cleaned up, there were some invalid chars
and other annoyances which the YUI compressor choked upon,
it now works again, have much fun!


git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0@781990 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -51,7 +51,7 @@
 
                         <configuration>
                             <scripts>target/classes/META-INF/resources/javax/faces/ajax/</scripts>
-                            <compressor>yahooui</compressor>                                                
+                            <compressor>yahooUI</compressor>
                         </configuration>
                     </execution>
                 </executions>
