--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.8-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -543,7 +543,7 @@
   </reporting>
 
   <properties>
-    <myfaces-shared.version>2.0.10-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>2.0.10</myfaces-shared.version>
   </properties>
 
 </project>
