--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.2.7-SNAPSHOT</version>
+    <version>1.2.8-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -584,6 +584,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.6-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>3.0.6</myfaces-shared.version>
   </properties>
 </project>
