--- a/api/pom.xml
+++ b/api/pom.xml
@@ -14,10 +14,9 @@
     </description>
     <url>http://myfaces.apache.org/core20/myfaces-api</url>
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0/api</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0/api
-        </developerConnection>
-        <url>http://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0/api</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/api</developerConnection>
+        <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/api</url>
     </scm>
     <build>
 
