--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,9 +13,9 @@
   </description>
   <url>http://myfaces.apache.org/core12/myfaces-api</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/api</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/api</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/api</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/api</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/api</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/api</url>
   </scm>
   <build>
     <plugins>
