--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -14,9 +14,9 @@
   </description>
   <url>http://myfaces.apache.org/core12/myfaces-impl</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/impl</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/impl</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/impl</url>
   </scm>
   <build>
     <resources>
