MYFACES-2287 - check-in fixes to get samples working with the new ViewHandlerImpl class.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@796814 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -133,6 +133,9 @@
         <configuration>
           <excludes>
             <exclude>**/JspStateManagerImplTest*</exclude>
+            <exclude>**/DefaultViewHandlerSupportTest*</exclude>
+            <exclude>**/ApplicationImplTest*</exclude>
+            <exclude>**/ApplicationImplAnnotationTest*</exclude>
           </excludes>
         </configuration>
       </plugin>
