https://issues.apache.org/jira/browse/MYFACES-2172
enabled the integrated javascript compression in the builds

git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@801097 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -25,10 +25,14 @@
            <!--
            javascript plugin adjusted to our build process
            please do not delete this it is just disabled for now
-           
+           -->
+
+
             <plugin>
                 <artifactId>javascript-maven-plugin</artifactId>
                 <groupId>org.codehaus.mojo.javascript</groupId>
+                <!-- we have to enforce a version for now which works due to the alpha stage of the plugin -->
+                <version>1.0-alpha-1-20090530.211438-7</version>
                 <extensions>true</extensions>
                 <executions>
                      <execution>
@@ -60,7 +64,7 @@
                     <outputDirectory>${basedir}/target/classes/META-INF/resources/javax.faces/</outputDirectory>
                 </configuration>
             </plugin>
-            -->
+        
 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
