--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -584,6 +584,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.6</myfaces-shared.version>
+    <myfaces-shared.version>3.0.7-SNAPSHOT</myfaces-shared.version>
   </properties>
 </project>
